--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@perp/contract": "1.0.4",
     "@uniswap/sdk": "^3.0.3",
+    "axios": "^0.21.1",
     "cross-fetch": "3.0.5",
     "dotenv": "8.2.0",
     "erc20-contract-js": "^1.3.1",
