--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "8.2.0",
     "erc20-contract-js": "^1.3.1",
     "esm": "^3.2.25",
-    "ethers": "5.0.9"
+    "ethers": "5.0.9",
+    "etherscan-api": "^10.0.5"
   }
 }
