--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node -r esm neutral.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +19,7 @@
     "erc20-contract-js": "^1.3.1",
     "esm": "^3.2.25",
     "ethers": "5.0.9",
-    "etherscan-api": "^10.0.5"
+    "etherscan-api": "^10.0.5",
+    "express": "^4.17.1"
   }
 }
