--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "esm": "^3.2.25",
     "ethers": "5.0.9",
     "etherscan-api": "^10.0.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "web3": "^1.3.4"
   }
 }
