--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ethers": "5.0.9",
     "etherscan-api": "^10.0.5",
     "express": "^4.17.1",
+    "line-reader": "^0.4.0",
     "web3": "^1.3.4"
   }
 }
